add past 24hr information

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -21,8 +21,12 @@
     <!-- your app's js -->
     <script src="js/gov.js"></script>
     <script src="js/gov2.js"></script>
+    <script src="js/pastStation.js"></script>
     <script src="js/select_town.js"></script>
+    
     <script src="js/temp.js"></script>
+    <script src="js/temp2.js"></script>
+    
 	<script src="js/language.js"></script>
     <script src="js/global.js"></script>
     <script src="js/common.js"></script>
