--- a/src/www/index.html
+++ b/src/www/index.html
@@ -23,10 +23,10 @@
     <script src="js/gov2.js"></script>
     <script src="js/pastStation.js"></script>
     <script src="js/select_town.js"></script>
-    
+    <!--
     <script src="js/temp.js"></script>
     <script src="js/temp2.js"></script>
-    
+    -->
 	<script src="js/language.js"></script>
     <script src="js/global.js"></script>
     <script src="js/common.js"></script>
@@ -51,12 +51,13 @@
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-    <ion-nav-view>
     <!--
     <div class="bar bar-header">
       <button class="button pull-right" ng-click="clickUpdate()">更新資料</button>
+      <button ng-click="clickUpdate()" class="button pull-right right button-icon icon ion-search"></button>
     </div>
     -->
+    <ion-nav-view>
     </ion-nav-view>
   </body>
 </html>
